# dcs-elog

./: .gitignore  CMakeLists.txt  INSTALLATION  README.md
connection_library/: CMakeLists.txt  elog_connector.c  elog_connector.h  elog_create_event_message.c  elog_create_event_message.h  elog_errors.c  elog_errors.h  elog_event.c  elog_event.h  main.c
include/: add_tag_query.h  administrator.h  attachment_database_info.h  attachment_handler.h  attachment_handler_rx.h  attachment_handler_tx.h  attachment_info.h  base64.h  base64_encoder.h  base_exception.h  concurrent_queue.h  config.h  connection_handler.h  consumer.h  create_event_procedure.h  create_event_request.h  create_library_event_procedure.h  create_library_event_request.h  create_tag_procedure.h  create_tag_request.h  custom_exceptions.h  database.h  dcs_admin_agent.h  dcs_thread.h  delete_tag_procedure.h  delete_tag_query.h  delete_tag_request.h  expand_tree_query.h  file_name_parser.h  file_stream.h  insert_query.h  jso.h  json.h  json_array.h  json_field.h  json_item.h  json_number.h  json_object.h  json_string.h  json_stringifier.h  (+41 more)
include/json/: array.h  field.h  item.h  json.h  json_string.h  number.h  object.h  string.h  value.h
resources/: database.db  delete.sql  parameters.conf
resources/backup/: database.db
scripts/: create_database.sh  reset_database.sh  start_elog.sh  stop_elog.sh
sql/: expand_tags_tree.sql  reset_database.sql  select_query.sql  select_tag.sql  setup_database.sql
sqlite/: CMakeLists.txt
src/: CMakeLists.txt  add_tag_query.cpp  administrator.cpp  attachment_database_info.cpp  attachment_handler.cpp  attachment_handler_rx.cpp  attachment_handler_tx.cpp  attachment_info.cpp  base64.cpp  base64_encoder.cpp  config.cpp  connection_handler.cpp  consumer.cpp  create_event_procedure.cpp  create_event_request.cpp  create_library_event_procedure.cpp  create_library_event_request.cpp  create_tag_procedure.cpp  create_tag_request.cpp  custom_exceptions.cpp  database.cpp  dcs_thread.cpp  delete_tag_procedure.cpp  delete_tag_query.cpp  delete_tag_request.cpp  expand_tree_query.cpp  field.cpp  file_name_parser.cpp  file_stream.cpp  insert_query.cpp  item.cpp  jso.cpp  json.cpp  json_array.cpp  json_field.cpp  json_item.cpp  json_object.cpp  json_string.cpp  json_stringifier.cpp  log_entry.cpp  (+38 more)
src/json/: array.cpp  field.cpp  json.cpp  json_string.cpp  object.cpp  string.cpp
tests/: CMakeLists.txt
tests/googletest/: CMakeLists.txt
tests/src/: base64_encoder_test.cpp  concurrent_queue_test.cpp  file_name_parser_test.cpp  msg_parser_test.cpp  select_query_test.cpp  unit_tests.cpp  utils_test.cpp
tmp/: select_query.sql
webApp/: add_tag.php  app.js  button_load_handler.js  dcs.php  delete_tag.php  event_log.js  global_styles.css  index.html  insert.php  insert_controller.js  insert_styles.css  load_tags.php  menu_styles.css  select.php  select_controller.js  select_styles.css  style.css  tabs_controller.js  tags_controller.js  tags_styles.css  tags_tree.js  tcp_ip.php  update_event.php  update_event_manager.js  update_tag.php  utilities.js  utils.php
webApp/javascript/: app.js  insert_controller.js  select_controller.js  tags_controller.js  tags_tree.js  utilities.js
webApp/php_scripts/: add_tag.php  delete_tag.php  insert.php  load_tags.php  select.php  tcp_ip.php  update_event.php  update_tag.php  utils.php
webApp/styles/: global_styles.css  insert_styles.css  menu_styles.css  select_styles.css
